# ncblog

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.tsx  index.css
admin-ui/src/api/: index.ts
admin-ui/src/components/: Layout.css  Layout.tsx  MilkdownEditor.css  MilkdownEditor.tsx
admin-ui/src/pages/: EditPagePage.tsx  EditPostPage.css  EditPostPage.tsx  LoginPage.css  LoginPage.tsx  PagesPage.css  PagesPage.tsx  PostsPage.css  PostsPage.tsx  SiteConfigPage.css  SiteConfigPage.tsx
backend/: Cargo.toml
backend/src/: app_state.rs  config.rs  main.rs
backend/src/routes/: auth.rs  build.rs  mod.rs  pages.rs  posts.rs  site.rs
backend/src/services/: content_store.rs  hugo_runner.rs  mod.rs
site/: hugo.toml
site/content/posts/: hello-world.md
site/themes/minimal/: theme.toml
site/themes/minimal/assets/css/: main.css
site/themes/minimal/assets/js/: main.js
site/themes/minimal/layouts/: index.html
site/themes/minimal/layouts/_default/: baseof.html  list.html  single.html  taxonomy.html  terms.html
site/themes/minimal/layouts/partials/: footer.html  head.html  menu.html  post-card.html  post-meta.html  sidebar.html  social-links.html  taxonomy-list.html
